@@ -1,3 +1,8 @@
+2013-07-06  tasogare66 <tasogare66@gmail.com>
+
+	* red-rogue-cs:
+	XorRandom.csを追加
+
 2013-07-04  tasogare66 <tasogare66@gmail.com>
 
 	* red-rogue-cs:
